--- a/Somewhere_City-Democratic_Site/index.html
+++ b/Somewhere_City-Democratic_Site/index.html
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-lg-push-2">
+        <div class="col-md-6 col-lg-3 col-lg-push-3">
           <div id="tweet_box"><h4>Tweets</h4>
           <p><strong><a href="#">Deb and Dustin,</a></strong><br><em> Somewhere City</em><br>“We started working with bfghm months ago and we have been extremely happy with  dog sittdmding service. Ossm, Gloria,<img class="pull-left" width="150px" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ” -- Deb and Dustin, <em>Somewhere City</em></p> 
           <br><br>
@@ -141,6 +141,16 @@
           <p><strong><a href="#">Wendy,</a></strong><br><em> Somewhere City</em><br><img class="pull-left" width="150px" height="100px" src="images/.jpg">“u yeyr h gls uhhl yisrtu lhert uhhu aerth .K sdfj ouhu > LEO  UShfyg iYflyEr  huher uher uhurb u  ushtuh; ;hurht uhlizrltzlst who would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilvawho would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilvald.” -- Wendy, <em> Somewhere City</em></p>
           <br><br>
           <p><strong><a href="#">Deb and Dustin,</a></strong><br><em> Somewhere City</em><br>“who would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva<img class="pull-right" width="150px" height="100px" src="images/.jpg"> tvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sn r09yzn90 rud jouhvU usfuhv durhilvawho would rearrange t tvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvv usfuhv durhilvawho would rearrange t.” -- Deb and Dustin, <em>Somewhere City</em></p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 col-lg-pull-3">
+          <div id="headlines"><h3>Headlines</h3>
+          <p><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU  wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrqusfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ”<a href="#">... more </a></p> 
+          <br><br>
+          <p><em> Somewhere City</em><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweur80  ur uw9uq wuunq3-nro'ehrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
+          <br><br>
+          <p><br><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9zrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
+          <br><br>
           </div>
         </div>
       </div>
