--- a/Somewhere_City-Democratic_Site/index.html
+++ b/Somewhere_City-Democratic_Site/index.html
@@ -99,39 +99,39 @@
   <div id="home_box">
     <div class="container">
       <div class="row">
+        <br><br><h2 class="col-lg-8 text-center"><strong>WE CAN DO IT!!</strong></h2>
         <div class="col-md-6 col-lg-6">
-          <div class="row">
-            <div class="col-lg-12">
-            <br><br><h2 class="text-center"><strong>WE CAN DO IT!!</strong></h2>
-              <div class="media">
-                <div class="">
-                  <a href="#">
-                    <img class="media-object" width="100%" src="images/bridge.jpg" alt="...">
-                  </a>
-                </div>
-                <div class="media-body">
-                <h4 class="media-heading"><strong>Lhsh dfbhb fsdhfksd</strong></h4><p><br><em> Somewhere City</em><br>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br>
-                </p>
-                </div>
-              </div>
-              <div class="whats_new"><h3> What's New</h3>
-                <div class="col-md-4 col-lg-4">
-                  <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
-                  </section><a href="#">... more </a>
-                </div>
-                <div class="col-md-4 col-lg-4">
-                  <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j00uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
-                  </section><a href="#">... more </a>
-                </div>
-                <div class="col-md-4 col-lg-4">
-                  <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwe uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuw9 eutu wue w9eur w3urwue0tuwue08tu q09"
-                  </p>
-                  </section><a href="#">... more </a>
-                </div>
-              </div>
+          <div class="media">
+            <div class="">
+              <a href="#">
+                <img class="media-object" width="100%" src="images/bridge.jpg" alt="...">
+              </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading"><strong>Lhsh dfbhb fsdhfksd</strong></h4><p><br><em> Somewhere City</em><br>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br>
+            </p>
             </div>
           </div>
-        </div>
+          <div class="whats_new"><h3> What's New</h3>
+            <div class="col-md-4 col-lg-4">
+              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
+                  </section><a href="#">... more </a>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j00uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
+              </section><a href="#">... more </a>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwe uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuw9 eutu wue w9eur w3urwue0tuwue08tu q09"
+              </p>
+              </section><a href="#">... more </a>
+            </div>
+            </div>
+            <div class="col-lg-12">
+              <br><br>
+              <h4><strong>Lhsh dfbhb fsdhfksd</strong><br><em> Somewhere City</em></h4><br><p>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikr q09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br></p>
+            </div>
+          </div>
         <div class="col-md-6 col-lg-3 col-lg-push-3">
           <div id="tweet_box"><h4>Tweets</h4>
           <p><strong><a href="#">Deb and Dustin,</a></strong><br><em> Somewhere City</em><br>“We started working with bfghm months ago and we have been extremely happy with  dog sittdmding service. Ossm, Gloria,<img class="pull-left" width="150px" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ” -- Deb and Dustin, <em>Somewhere City</em></p> 
@@ -150,6 +150,7 @@
           <p><em> Somewhere City</em><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweur80  ur uw9uq wuunq3-nro'ehrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
           <br><br>
           <p><br><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9zrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
+          <p><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU  wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrqusfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ”<a href="#">... more </a></p> 
           <br><br>
           </div>
         </div>
