--- a/Somewhere_City-Democratic_Site/mission.html
+++ b/Somewhere_City-Democratic_Site/mission.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Somewhere City-Democratic Site</title>
+    <title>Somewhere City-Democratic Mission Statement</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -99,40 +99,17 @@
   <div id="home_box">
     <div class="container">
       <div class="row">
-        <br><br><h2 class="col-lg-8 text-center"><strong>WE CAN DO IT!!</strong></h2>
-        <div class="col-md-6 col-lg-6">
-          <div class="media">
-            <div class="">
-              <a href="#">
-                <img class="media-object" width="100%" src="images/bridge.jpg" alt="...">
-              </a>
-            </div>
-            <div class="media-body">
-            <h4 class="media-heading"><strong>Lhsh dfbhb fsdhfksd</strong></h4><p><br><em> Somewhere City</em><br>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br>
-            </p>
-            </div>
-          </div>
-          <div class="whats_new"><h3> What's New</h3>
-            <div class="col-md-4 col-lg-4">
-              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
-                  </section><a href="#">... more </a>
-            </div>
-            <div class="col-md-4 col-lg-4">
-              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j00uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"</p>
-              </section><a href="#">... more </a>
-            </div>
-            <div class="col-md-4 col-lg-4">
-              <section><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwe uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuw9 eutu wue w9eur w3urwue0tuwue08tu q09"
-              </p>
-              </section><a href="#">... more </a>
-            </div>
-            </div>
+        <br><br><h2 class="col-lg-8 text-center"><strong>Mission Statement</strong></h2>
+        <div class="col-md-8 col-lg-8">
             <div class="col-lg-12">
               <br><br>
-              <h4><strong>Lhsh dfbhb fsdhfksd</strong><br><em> Somewhere City</em></h4><br><p>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikr q09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br></p>
+              <h4><strong>Lhsh dfbhb fsdhfksd</strong><br><em> Somewhere City</em></h4><br><p>zdjsk sdfhu uhfu hpuehriuh hetuhuh tuhzdurhtudhrt z;jz odouzdruuozrutuzruz ouuuzsutu;z  jurt   ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 <p><<br>“sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,<img class="pull-right" width="100px" height="150px" src="images/.jpg">va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn trip – I found that he had cleared out a spot va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnip it was under the sink. I knew I had found a hero va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn” -- Laura M., <em>Somewhere City</em></p>
+              <br><br>
+              <br><img class="pull-left" width="150px" height="100px" src="images/.jpg">“u yeyr h gls uhhl yisrtu lhert uhhu aerth .K sdfj ouhu > LEO  UShfyg iYflyEr  huher uher uhurb u  ushtuh; ;hurht uhlizrltzlst who would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilvawho would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilvald.” 
+              <br><br> wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik<br> ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikr q09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyikouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrq09 wurq9uwruq0uwr80  ur uw9uq wuunq3-nro'erye0oyik...<br></p>
             </div>
           </div>
-        <div class="col-md-6 col-lg-3 col-lg-push-3">
+        <div class="col-md-6 col-lg-3 col-lg-push-1">
           <div id="tweet_box"><h4>Tweets</h4>
           <p><strong><a href="#">Deb and Dustin,</a></strong><br><em> Somewhere City</em><br>“We started working with bfghm months ago and we have been extremely happy with  dog sittdmding service. Ossm, Gloria,<img class="pull-left" width="150px" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ” -- Deb and Dustin, <em>Somewhere City</em></p> 
           <br><br>
@@ -143,16 +120,7 @@
           <p><strong><a href="#">Deb and Dustin,</a></strong><br><em> Somewhere City</em><br>“who would rearrange their space around va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva<img class="pull-right" width="150px" height="100px" src="images/.jpg"> tvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysn knows she va ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sn r09yzn90 rud jouhvU usfuhv durhilvawho would rearrange t tvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn, sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU usfuhv durhilva ertvv usfuhv durhilvawho would rearrange t.” -- Deb and Dustin, <em>Somewhere City</em></p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 col-lg-pull-3">
-          <div id="headlines"><h3>Headlines</h3>
-          <p><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU  wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrqusfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ”<a href="#">... more </a></p> 
-          <br><br>
-          <p><em> Somewhere City</em><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweur80  ur uw9uq wuunq3-nro'ehrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
-          <br><br>
-          <p><br><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"><p>"rtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9zrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet j0wurb 9 0us0eu0E*us0[uuti u 0u 0uer9u09ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09"<a href="#">... more </a></p>
-          <p><em> Somewhere City</em><br><img class="" width="100%" height="100px" src="images/.jpg"> sjpd ijpisjpi jprtysn r09yzn90 rud jouhvU  wuunq3-nro'erye0oyik ouzrthu uhrtuhzoudrhtu  hu hruhzu 58w39 ubet ur9  wuet09wet wue w9ue0uwetuwrtuert80wu50w  uweut0 wtuw9 eutu wue w9eur w3urwue0tuwue08tu q09wrqusfuhv durhilva ertvvsliuvyuy ertbsrytynr tysr rysnrtynsr erbsrtyn,  tyjd ty s sry kisy  iyliygly ”<a href="#">... more </a></p> 
-          <br><br>
-          </div>
+        
         </div>
       </div>
     </div>
