--- a/Somewhere_City-Democratic_Site/index.html
+++ b/Somewhere_City-Democratic_Site/index.html
@@ -36,6 +36,7 @@
                 <div>
                 <button class="btn btn-primary" href="index.html" type="button" role="button"><span class="hidden-xs"> Home</span>
                 </button>
+                </div>
               </li>
               <li>
               <div class="dropdown">
@@ -78,11 +79,13 @@
                 <div>
                 <button class="btn btn-primary" href="calender.html" type="button" role="button"><span class="hidden-xs"> Calender</span>
                 </button>
+                </div>
               </li>
               <li>
                 <div>
                 <button class="btn btn-primary" href="contribute.html" type="button" role="button"><span class="hidden-xs"> Contribute</span>
                 </button>
+                </div>
               </li>
             </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
